--- a/openchrom/plugins/net.openchrom.msqbatlibs.bioutils.proteomics.fragment.test/pom.xml
+++ b/openchrom/plugins/net.openchrom.msqbatlibs.bioutils.proteomics.fragment.test/pom.xml
@@ -8,7 +8,7 @@
     <version>BUILD-VERSION</version>
   </parent>
 
-  <artifactId>net.openchrom.msqbatlibs.bioutils.proteomcis.fragement.test</artifactId>
+  <artifactId>net.openchrom.msqbatlibs.bioutils.proteomics.fragment.test</artifactId>
   <packaging>eclipse-plugin</packaging>
   <version>1.1.0-SNAPSHOT</version>
   
